src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Actividad__c</fullName>
        <label>Actividad</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AGRICULTURA</fullName>
                </value>
                <value>
                    <fullName>GANADERIA</fullName>
                </value>
                <value>
                    <fullName>SILVICULTURA</fullName>
                </value>
                <value>
                    <fullName>CAZA Y PESCA</fullName>
                </value>
                <value>
                    <fullName>EXTRACCION Y BENEFICIO DE CARBON MINERAL Y GRAFITO</fullName>
                </value>
                <value>
                    <fullName>EXTRACCION DE PETROLEO CRUDO Y GAS</fullName>
                </value>
                <value>
                    <fullName>EXTRACCION Y BENEFICIO DE MINERAL DE HIERRO</fullName>
                </value>
                <value>
                    <fullName>EXTRACCION Y BENEFICIO DE MINERALES METALICOS NO FERROSOS</fullName>
                </value>
                <value>
                    <fullName>EXPLOTACION DE CANTERA, ARENA, GRAVA Y ARCILLA</fullName>
                </value>
                <value>
                    <fullName>EXTRACCION Y BENEFICIO DE MINERALES NO METALICOS</fullName>
                </value>
                <value>
                    <fullName>PREPARACION DE FRUTAS Y LEGUMBRES</fullName>
                </value>
                <value>
                    <fullName>MOLIENDA DE TRIGO</fullName>
                </value>
                <value>
                    <fullName>MOLIENDA DE NIXTAMAL</fullName>
                </value>
                <value>
                    <fullName>OTROS PRODUCTOS ALIMENTICIOS</fullName>
                </value>
                <value>
                    <fullName>BENEFICIO Y MOLIENDA DE CAFE</fullName>
                </value>
                <value>
                    <fullName>AZUCAR</fullName>
                </value>
                <value>
                    <fullName>CARNES Y LACTEOS</fullName>
                </value>
                <value>
                    <fullName>ACEITES Y GRASAS COMESTIBLES</fullName>
                </value>
                <value>
                    <fullName>ALIMENTOS PARA ANIMALES</fullName>
                </value>
                <value>
                    <fullName>BEBIDAS ALCOHOLICAS</fullName>
                </value>
                <value>
                    <fullName>CERVEZA Y MALTA</fullName>
                </value>
                <value>
                    <fullName>REFRESCOS Y AGUAS GACEOSAS</fullName>
                </value>
                <value>
                    <fullName>TABACO</fullName>
                </value>
                <value>
                    <fullName>HILADOS Y TEJIDOS DE FIBRAS BLANDAS</fullName>
                </value>
                <value>
                    <fullName>OTRAS INDUSTRIAS TEXTILES</fullName>
                </value>
                <value>
                    <fullName>PRENDAS DE VESTIR</fullName>
                </value>
                <value>
                    <fullName>HILADOS Y TEJIDOS DE FIBRAS DURAS</fullName>
                </value>
                <value>
                    <fullName>CUERO Y CALZADO</fullName>
                </value>
                <value>
                    <fullName>ASERRADEROS TRIPLAY Y TABLERO</fullName>
                </value>
                <value>
                    <fullName>OTROS PRODUCTOS MADERA Y CORCHO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApellidoMaterno__c</fullName>
        <description>Apellido Materno del Cliente</description>
        <label>Apellido Materno</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApellidoPaterno__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Paterno</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_at_Comentarios__c</fullName>
        <description>BPyP Almacena comentarios relevantes sobre el Candidato o Cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPyP_at_Otros_factores__c</fullName>
        <description>BPyP Especifica el factor de descarte si el Estado del Candidato es Descartado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otros factores de descarte</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_250_Clientes_Top__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BPyP usado para el área Staff identifica si el cliente pertenece a este segmento</description>
        <label>250 Clientes Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_candidatoCliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si el cliente se encontraba como candidato BPyP y se convierto en cliente la casilla ses eleccionará</description>
        <inlineHelpText>El cliente fue Candidato BPyP</inlineHelpText>
        <label>Candidato a Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_Es_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite identificar si el prospecto ya es cliente Bancomer</description>
        <label>¿Es cliente bancomer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_Es_cliente_principal_del_grupo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite identificar si es cliente principal del registro</description>
        <label>Es cliente principal del grupo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_FamilyGaCliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que se utiliza para el proceso de aprobación cuando se quiere asignar un Family Group a un Cliente o Prospecto exitente</description>
        <label>FamilyGroup a Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_PPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PPE información proveniente de Data Mart</description>
        <label>PPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ca_RecuperarFamilyG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo utilizado para el proceso de aprobacion y recupera el Family Group cuando es rechazado del borrado</description>
        <label>Recuperar Family Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_BusinessEmail__c</fullName>
        <description>Correo electrónico de la empresa</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Correo electrónico de la empresa</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BPyP_dv_Monto_de_inversi_n__c</fullName>
        <description>Monto de inversion comprometido para candidato BPyP</description>
        <label>Valor potencial del Cliente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BPyP_Fecha_de_ultima_visita__c</fullName>
        <description>Fecha de última visita para bpyp</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Ultima Visita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPyP_fh_FechaActualizacionKYC__c</fullName>
        <description>Fecha de la última actualización que será enviado por DataMart</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Última Actualización KYC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPyP_Fm_Ratio_de_conversion_opps__c</fullName>
        <description>Oportunidades cerradas ganadas entre las oportunidades totales</description>
        <formula>Oportunidades_Cerrada_Ganada__c /Oportunidad_Totales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio de conversión oportunidades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BPyP_NoIdentificacion__c</fullName>
        <description>Campo que se utiliza para la carga de clientes de la Banca Patrimonial y Privada</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Número de identificación</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_ls_Estado_del_candidato__c</fullName>
        <description>Estado del candidato Abierto o Descartado</description>
        <label>Estado del candidato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abierto</fullName>
                    <default>true</default>
                    <label>Abierto</label>
                </value>
                <value>
                    <fullName>Descartado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_ls_Motivo__c</fullName>
        <description>Lista de motivo de descarte dependiente si el Estatus es Descartado</description>
        <label>Motivo de descarte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Candidato no posee los recursos mínimos para la Banca</fullName>
                </value>
                <value>
                    <fullName>Candidato no satisfecho con los beneficios de la Banca</fullName>
                </value>
                <value>
                    <fullName>Candidato sin información completa para el alta en el Banco</fullName>
                </value>
                <value>
                    <fullName>Oferta no fue atractiva para el cliente</fullName>
                </value>
                <value>
                    <fullName>Otros factores de descarte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP_Rb_Cliente_principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Muestra Clientes o Candidatos Asociados que no contengan el Tipo de registro de cuenta Cliente Hipotecario, No Cliente Hipotecario, Cliente PyME, Grupo PyME, Consumer Finance, Cliente BHI, Cliente Gobierno, Cliente Empresa, No cliente Empresa, No cliente Gobierno, Grupo</description>
        <label>Relacionado con: Cliente principal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Cliente PyME</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clientes o Candidatos Asociados</relationshipLabel>
        <relationshipName>Clientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_Rb_Cliente_principal_del_family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Muestra los Clientes principal asociados a los registros de tipo BPyP donde su Tipo de registro de cuenta es igual a Cliente BPyP</description>
        <label>Cliente principal del family group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Cliente BPyP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cliente principal</relationshipLabel>
        <relationshipName>Clientes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_Rb_Family_Group_al_que_pertenece__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permite identificar el Family Group al que pertenecen los clientes BPyP y Candidatos</description>
        <inlineHelpText>Se rellena automáticamente al ingresar el grupo al que pertenece</inlineHelpText>
        <label>Family Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Cliente PyME</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clientes</relationshipLabel>
        <relationshipName>Clientes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_Rb_Family_Group_Candidato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Obtiene el Family Group de candidatos</description>
        <label>Family Group C</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Cliente2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPyP_re_Valor_de_las_opps_abier__c</fullName>
        <description>Almacena el valor de las oportunidades Abiertas</description>
        <label>Valor de las Opps Abiertas</label>
        <summarizedField>Opportunity.op_amountPivote_dv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Abierta</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields> 
        <fullName>MX_SB_SAC_Homoclave__c</fullName>
        <description>Homoclave de Contratante en Cliper.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Homoclave</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_re_Valor_de_las_Opps_Descartadas__c</fullName>
        <description>Almacena el valor de las oportunidades Descartadas</description>
        <label>Valor de las Opps Descartadas</label>
        <summarizedField>Opportunity.op_amountPivote_dv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Descartada / Rechazada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BPyP_re_Valor_de_las_opps_ganadas__c</fullName>
        <description>Almacena el valor de las oportunidades Cerradas/Ganadas</description>
        <label>Valor de las Opps Cerradas/Ganadas</label>
        <summarizedField>Opportunity.op_amountPivote_dv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Cerrada Ganada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BPyP_tx_ActividadGiro__c</fullName>
        <description>Actividad o Giro asociado al cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actividad o Giro</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_tx_Clasif_cli__c</fullName>
        <description>Clasificación cliente para contratos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Clasificación cliente</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPyP_Un_Numero_Promotor__c</fullName>
        <description>Número promotor para BPyP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número promotor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calificacion_de_Riesgo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Calificación de Riesgo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_y_numero__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Calle y número</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <description>Canal de venta</description>
        <formula>CASE( AccountSource  ,&quot;Outbound&quot;, &quot;Web&quot;, &quot;Inbound&quot;, &quot;Telemarketing&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClienteID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codigoIntermediario__c</fullName>
        <description>Número de cuatro dígitos del intermediario.</description>
        <label>Código Intermediario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoPostal__c</fullName>
        <description>Código Postal</description>
        <label>Código Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonia__c</fullName>
        <description>Colonia domicilio de cliente</description>
        <label>Colonia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversi_n__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conversión</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correo_Electronico__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Campo utilizado como external ID</description>
        <externalId>true</externalId>
        <label>Correo Electrónico</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>CP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR__c</fullName>
        <description>Este campo permite capturar el Cetro Responsable al que pertenece una cuenta.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Centro Responsable</inlineHelpText>
        <label>CR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR1__c</fullName>
        <formula>Owner.CR__c</formula>
        <label>CR Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuadrante_Actual__c</fullName>
        <label>Cuadrante Actual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RENTABLE - VINCULADO</fullName>
                </value>
                <value>
                    <fullName>NO RENTABLE - VINCULADO</fullName>
                </value>
                <value>
                    <fullName>RENTABLE - NO VINCULADO</fullName>
                </value>
                <value>
                    <fullName>NO RENTABLE - NO VINCULADO</fullName>
                </value>
                <value>
                    <fullName>NO EVALUADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuentas_Bloqueadas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cuentas Bloqueadas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegacion__c</fullName>
        <description>Delegación del domicilio de cliente.</description>
        <label>Población</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegacion_Municipio__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Delegación / Municipio</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiaMesCumpleanios__c</fullName>
        <description>Información de cliente</description>
        <formula>TEXT(DAY(PersonBirthdate))  &amp; &apos;/&apos;  &amp; TEXT(MONTH(PersonBirthdate))</formula>
        <label>Día y mes de cumpleaños</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>División de la sucursal a la que pertenece el cliente.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>División</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division1__c</fullName>
        <formula>TEXT(Owner.Divisi_n__c)</formula>
        <label>División Usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edad__c</fullName>
        <description>Edad de cliente</description>
        <label>Edad</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnviarInformeMKT__c</fullName>
        <formula>IF(   DiaMesCumpleanios__c = text(day(today())) &amp;&apos;/&apos; &amp; text( MONTH(today())), &apos;SI&apos;, &apos;NO&apos;)</formula>
        <label>Enviar a informe MKT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escala_de_rentabilidad__c</fullName>
        <label>Escala de rentabilidad</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Estado</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_un_Reservas_Iniciales__c</fullName>
        <description>Campo para las reservas iniciales de los clientes ligados al tema de Saneamiento.</description>
        <label>Reservas Iniciales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Código de extensión de marcado de Telemarketing</description>
        <label>Extensión</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Familias_no_vinculadas__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Familias no vinculadas</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Familias_vinculadas__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Familias vinculadas</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fecha_de_conversi_n__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de conversión</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_de_ltima_asignaci_n__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de última asignación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Nacimiento__c</fullName>
        <description>Fecha de Nacimiento de la persona</description>
        <label>Fecha de Nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forma_de_pago__c</fullName>
        <description>Frecuencia del pago.</description>
        <label>Forma de pago</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>mensual</fullName>
                </value>
                <value>
                    <fullName>semestral</fullName>
                </value>
                <value>
                    <fullName>anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formato_de_venta_distribuci_n__c</fullName>
        <label>Formato de venta / distribución</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Física</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_Fecha_desde_la_ltima_visita__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Fecha referencia para calcular los días que han pasado desde la última visita</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha desde la última visita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Asesor_Comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona un Contacto a la Cuenta</description>
        <label>Asesor Comercial</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Usuarios</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Clientes</relationshipLabel>
        <relationshipName>Clientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Busqueda_Comercio__c</fullName>
        <description>Campo para la aplicación Workflow, permite hacer una actualización con lo que se captura en el campo Name</description>
        <label>Búsqueda Comercio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Canal__c</fullName>
        <description>Campo para la aplicación Workflow, permite hacer una multiselección de un Canal</description>
        <label>Canal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Marketing Dinámico</fullName>
                </value>
                <value>
                    <fullName>Pauta Digital</fullName>
                </value>
                <value>
                    <fullName>Masivo o Semimasivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Canales_De_Comunicacion__c</fullName>
        <description>Campo para la aplicación Workflow, permite hacer una selección de un Canal de Comunicación</description>
        <label>Canales de Comunicación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Correo Directo</fullName>
                </value>
                <value>
                    <fullName>Correo Electrónico</fullName>
                </value>
                <value>
                    <fullName>Encuestas Telefónicas</fullName>
                </value>
                <value>
                    <fullName>Inserto en edo. cta.</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Redes Sociales</fullName>
                </value>
                <value>
                    <fullName>Login Marketing</fullName>
                </value>
                <value>
                    <fullName>Cenefa de edo. cta.</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Correo_Electronico_Custodio_1__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para capturar un correo electrónico del Custodio</description>
        <label>Correo Electrónico Custodio 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Correo_Electronico_Custodio_2__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para capturar un correo electrónico del Custodio</description>
        <label>Correo Electrónico Custodio 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Facturacion__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para capturar un dato de facturación del proveedor</description>
        <label>Facturación</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Giro__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para capturar el Giro o Industria del proveedor</description>
        <label>Giro o Industria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Giro_Comercial__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para seleccionar un Giro Comercial del proveedor</description>
        <label>Giro Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alimentos - Abarrotes</fullName>
                </value>
                <value>
                    <fullName>Alimentos y debidas (repostería)</fullName>
                </value>
                <value>
                    <fullName>Aseguradoras</fullName>
                </value>
                <value>
                    <fullName>Automotriz - Gasolineras</fullName>
                </value>
                <value>
                    <fullName>Beneficencia</fullName>
                </value>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Boutique Calzado Deportivo</fullName>
                </value>
                <value>
                    <fullName>Educación - Escuela de idiomas</fullName>
                </value>
                <value>
                    <fullName>Electrónica</fullName>
                </value>
                <value>
                    <fullName>Electrónica / Tiendas departamentales</fullName>
                </value>
                <value>
                    <fullName>Entretenimiento - Cines y teatros</fullName>
                </value>
                <value>
                    <fullName>Farmacias</fullName>
                </value>
                <value>
                    <fullName>Gasolineras</fullName>
                </value>
                <value>
                    <fullName>Heladería</fullName>
                </value>
                <value>
                    <fullName>Hogar - Servicios de hogar</fullName>
                </value>
                <value>
                    <fullName>Inmobiliaria</fullName>
                </value>
                <value>
                    <fullName>Institutos, escuelas y universidades</fullName>
                </value>
                <value>
                    <fullName>Joyería</fullName>
                </value>
                <value>
                    <fullName>Material de construcción / Ferreterías</fullName>
                </value>
                <value>
                    <fullName>Publicidad</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Restaurantes</fullName>
                </value>
                <value>
                    <fullName>Restaurantes - Comida rápida</fullName>
                </value>
                <value>
                    <fullName>Restaurantes - Restaurantes</fullName>
                </value>
                <value>
                    <fullName>Ropa - Boutique</fullName>
                </value>
                <value>
                    <fullName>Ropa - Ropa para dama</fullName>
                </value>
                <value>
                    <fullName>Salones de belleza</fullName>
                </value>
                <value>
                    <fullName>Salud - Farmacias</fullName>
                </value>
                <value>
                    <fullName>Salud - Hospitales</fullName>
                </value>
                <value>
                    <fullName>Servicios - Almacenes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>